Upgrade to new maven versions