@@ -5,7 +5,7 @@
     <groupId>com.yahoo.imapnio</groupId>
     <artifactId>imapnio</artifactId>
     <packaging>pom</packaging>
-    <version>5.0.3</version>
+    <version>5.0.4</version>
     <name>${project.artifactId}</name>
     <url>https://github.com/yahoo/imapnio</url>
     <description>Parent POM file for imapnio project</description>
@@ -68,12 +68,12 @@
         <excludedJNILibraries />
         <excludedWarJNILibraries />
         <jdk.version>1.8</jdk.version>
-        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
         <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
         <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
         <jersey.version>2.30.1</jersey.version>
         <jackson.version>2.10.0</jackson.version>
-        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <testTimeLimitInSeconds>0</testTimeLimitInSeconds>
         <main.basedir>${project.basedir}</main.basedir>
     </properties>
@@ -168,24 +168,24 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.3.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.0-M6</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.3.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0-M3</version>
+                    <version>3.1.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-pmd-plugin</artifactId>
@@ -198,7 +198,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.3.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
@@ -211,17 +211,17 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.6.0</version>
+                    <version>3.0.0</version>
                 </plugin>
                 <plugin>
                     <groupId>com.github.spotbugs</groupId>
                     <artifactId>spotbugs-maven-plugin</artifactId>
-                    <version>4.0.0</version>
+                    <version>4.7.0.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-scm-plugin</artifactId>
-                    <version>1.11.2</version>
+                    <version>2.0.0-M1</version>
                     <inherited>false</inherited>
                 </plugin>
                 <plugin>
@@ -242,7 +242,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>com.github.spotbugs</groupId>
                                         <artifactId>spotbugs-maven-plugin</artifactId>
-                                        <versionRange>[3.1.11,)</versionRange>
+                                        <versionRange>[4.7.0.0,)</versionRange>
                                         <goals>
                                             <goal>check</goal>
                                         </goals>
@@ -268,7 +268,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>org.apache.maven.plugins</groupId>
                                         <artifactId>maven-dependency-plugin</artifactId>
-                                        <versionRange>[2.9,)</versionRange>
+                                        <versionRange>[3.3.0,)</versionRange>
                                         <goals>
                                             <goal>copy-dependencies</goal>
                                         </goals>
@@ -281,7 +281,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>org.apache.maven.plugins</groupId>
                                         <artifactId>maven-enforcer-plugin</artifactId>
-                                        <versionRange>[1.3.1,)</versionRange>
+                                        <versionRange>[3.1.0,)</versionRange>
                                         <goals>
                                             <goal>enforce</goal>
                                         </goals>
@@ -299,7 +299,7 @@
                                             maven-checkstyle-plugin
                                         </artifactId>
                                         <versionRange>
-                                            [2.13,)
+                                            [3.0.0,)
                                         </versionRange>
                                         <goals>
                                             <goal>check</goal>
@@ -376,12 +376,12 @@
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.0.0</version>
+                        <version>4.7.0</version>
                     </dependency>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs-annotations</artifactId>
-                        <version>3.1.12</version>
+                        <version>4.7.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.dom4j</groupId>
@@ -451,7 +451,9 @@
                 <configuration>
                     <forkMode>once</forkMode>
                     <!-- do not change the library.path - lafa -->
-                    <argLine>-Dfile.encoding=ANSI_X3.4-1968
+                    <argLine>
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                        -Dfile.encoding=ANSI_X3.4-1968
                         -Djava.library.path=
                         -javaagent:"${settings.localRepository}"/org/jacoco/org.jacoco.agent/${jacoco-maven-plugin.version}/org.jacoco.agent-${jacoco-maven-plugin.version}-runtime.jar=destfile=${basedir}/target/jacoco.exec</argLine>
                     <excludedGroups>notIsolate,EventListenersRegression</excludedGroups>
@@ -530,7 +532,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.4.0</version>
                 <configuration>
                     <source>8</source>
                 </configuration>
